--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Site Metas -->
-    <title>Health Lab - Responsive HTML5 Template</title>
+    <title>Design 3 for Health Glory</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
